# user_regitration_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  FEATURES.md  LICENSE  Procfile  README.md  docker-compose.test.yml  docker-compose.yml  project.toml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: container_image_cves.md  features_idea.md  implementation_plan.md  library_choices.md  production_readiness.md
src/app/: container.py  main.py
src/app/api/: dependencies.py
src/app/api/middlewares/: logging.py
src/app/api/routers/: users.py
src/app/api/schemas/: users.py
src/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  security.py
src/app/domain/: exceptions.py  models.py  ports.py  services.py
src/app/infrastructure/database/: client.py  migrations.py  repositories.py
src/app/infrastructure/database/migrations/: 0001_initial_schema.sql
src/app/infrastructure/email/: client.py
src/app/infrastructure/email/templates/: __init__.py  activation_de.txt  activation_en.txt  activation_es.txt  (+2 more)
tests/: conftest.py  helpers.py  test_activation.py  test_activation_code.py  test_email_client.py  test_email_templates.py  test_exception_handlers.py  test_health.py  test_logging_middleware.py  test_security.py  test_services.py  test_user_registration.py  test_users_me.py
tests/integration/: conftest.py  test_activation_code_rollback.py  test_full_flow.py  test_repositories.py
